--- a/src/todo-list.css
+++ b/src/todo-list.css
@@ -23,7 +23,7 @@ input[type=text]{
 
 input[type=button]{
     text-align:center;
-    width:50px;
+    /* width:50px; */
 }
 
 input[type=checkbox]{
